# leg_detector

leg_detector/: CMakeLists.txt  package.xml
leg_detector/include/leg_detector/: laser_processor.h
leg_detector/launch/: demo_stationary_simple_environment.launch.py
leg_detector/scripts/: joint_leg_tracker.py
leg_detector/src/: cluster_features.cpp  detect_leg_clusters.cpp  inflated_human_scan.cpp  local_occupancy_grid_mapping.cpp
leg_detector_msgs/: CMakeLists.txt  package.xml
leg_detector_msgs/msg/: Human.msg  HumanArray.msg  Leg.msg  LegArray.msg
